# commonops

./: LICENSE  pyproject.toml  requirements.txt
src/: test.ipynb
src/commonops/: zipops.py
src/commonops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/commonops/fileops/: fileops.py
